--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "test":"gulp run:test"
   },
   "dependencies": {
     "bluebird": "^3.3.5",
@@ -20,6 +21,8 @@
     "serve-favicon": "~2.3.0"
   },
   "devDependencies": {
-    "dotfiles": "^0.8.0"
+    "dotfiles": "^0.8.0",
+    "gulp": "^3.9.1",
+    "gulp-help": "^1.6.1"
   }
 }
