--- a/.elasticbeanstalk/config.yml
+++ b/.elasticbeanstalk/config.yml
@@ -1,8 +1,8 @@
 branch-defaults:
   master:
-    environment: taphr-api-server-dev
+    environment: taphr-authserver-dev
 global:
-  application_name: taphr-api-server
+  application_name: taphr-authserver-dev
   default_ec2_keyname: null
   default_platform: Node.js
   default_region: eu-west-1
